--- a/style.css
+++ b/style.css
@@ -1,22 +1,32 @@
-body{
+﻿body {
     margin: 0 0 0 0;
     padding: 0;
-   
+
 }
 
-a{
+a {
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 25px;
     padding: 9px;
 }
 
-.contenedor-negro{
-   display: grid;
-   margin: 0;
-    padding: 0;
+.contenedor-negro {
+    display: grid;
     background-color: black;
     width: 100%;
     height: 90px;
-    justify-content: left;
+    justify-content: end;
+}
+
+ul {
+    align-content: center;
+    padding-right: 600px;
+
+}
+#titulo{
+    color: white;
+    font-size: 30px;
+    padding-left: 20px;
+    justify-content: start;
 }
