--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 ﻿body {
-    margin: 0 0 0 0;
+    margin: 0;
     padding: 0;
-
 }
 
 a {
@@ -11,22 +10,29 @@ a {
     padding: 9px;
 }
 
+
 .contenedor-negro {
     display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
     background-color: black;
     width: 100%;
     height: 90px;
-    justify-content: end;
+    padding: 0 20px;
 }
 
 ul {
-    align-content: center;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
     padding-right: 600px;
-
 }
+
 #titulo{
     color: white;
-    font-size: 30px;
-    padding-left: 20px;
-    justify-content: start;
+    font-size: 47px;
+    margin: 0;
+    padding-left: 300px;
 }
