--- a/style.css
+++ b/style.css
@@ -108,9 +108,20 @@ footer {
 }
 
 .multimedia-items {
-
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: repeat(4, 1fr);
+    align-content: center;
+    justify-content: center;
+    gap: 20px;
+    grid-auto-rows: auto;
+    padding: 1cm 30%;
+    margin-left: 1px;
+    margin-right: 1px;
+}
 
+.multimedia-items img {
+    width: 400px;
+    height: 620px;
+    display: grid;
+    object-fit: cover;
 }
