--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     padding: 0;
     min-height: 100vh;
     display: grid;
-    grid-template-rows: auto 100% auto auto;
+    grid-template-rows: auto 1fr auto auto;
     grid-template-areas: "header" "main" "content" "footer";
 }
 
@@ -112,16 +112,16 @@ footer {
     grid-template-columns: repeat(4, 1fr);
     align-content: center;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
     grid-auto-rows: auto;
-    padding: 1cm 30%;
-    margin-left: 1px;
-    margin-right: 1px;
+    padding: 20px;
+    margin-left: 800px;
+    margin-right: 800px;
+    max-width: 1000px;
 }
 
 .multimedia-items img {
-    width: 400px;
-    height: 620px;
-    display: grid;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down fill;
 }
