--- a/style.css
+++ b/style.css
@@ -125,3 +125,85 @@ footer {
     height: 100%;
     object-fit: scale-down fill;
 }
+
+#grid-contacto {
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+    padding: 60px;
+    max-width: 1400px;
+    margin: 0 auto;
+    align-items: stretch;
+    font-family: Arial, sans-serif;
+    justify-content: space-between;
+
+}
+
+.formulario-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 25px;
+}
+
+.formulario-grid h1 {
+    font-size: 40px;
+    margin: 0 0 10px 0;
+    font-weight: 500;
+}
+
+.field-group {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 8px;
+}
+
+.field-group label {
+    font-size: 16px;
+    color: #333;
+}
+
+
+.field-group input {
+    border: none;
+    border-bottom: 2px solid #ccc;
+
+    padding: 10px 0;
+    outline: none;
+    font-size: 16px;
+}
+
+.field-group textarea {
+    border: 2px solid #ccc;
+    height: 250px;
+    padding: 10px;
+    resize: none;
+    outline: none;
+}
+
+.btn-enviar {
+    display: grid;
+    place-items: center;
+    background-color: #0066ff;
+    color: white;
+    border: none;
+    padding: 15px;
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+}
+
+
+#mapa {
+    width: 100%;
+    height: 100%;
+    border: 0;
+    row-gap: 5px;
+}
+
+.mapa-container {
+    display: grid;
+}
+
+.field-group input:focus { border-bottom: 2px solid #0066ff; }
