--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ footer {
 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 60px;
+    column-gap: 101px;
     padding: 60px;
     max-width: 1400px;
     margin: 0 auto;
@@ -143,7 +143,7 @@ footer {
 .formulario-grid {
     display: grid;
     grid-template-columns: 1fr;
-    row-gap: 10px;
+    row-gap: 2%;
 }
 
 .formulario-grid h1 {
@@ -206,4 +206,4 @@ footer {
     display: grid;
 }
 
-.field-group input:focus { border-bottom: 2px solid #0066ff; }
+.btn-enviar input:focus { border-bottom: 2px solid #0066ff; }
